test/MC/SVE/regression-tests/negative_tests/sve-ld1b-016.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64CLoad1LSSZ
// Offset register Rm cannot be xzr
ld1b z26.d, p0/z, [x6, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
